typesafe-builders/tests/ui/reject/field_attr_duplicate.stderr
error: Duplicate attribute on struct field
 --> tests/ui/reject/field_attr_duplicate.rs:6:2
  |
6 |     #[builder(optional)]
  |     ^^^^^^^^^^^^^^^^^^^^
